implementations/rust/ockam/ockam/tests/node/std/fail_if_macro_has_unsupported_attr.stderr
error: unknown attribute `timeout`
 --> tests/node/std/fail_if_macro_has_unsupported_attr.rs:1:15
  |
1 | #[ockam::node(timeout = 100)]
  |               ^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/node/std/fail_if_macro_has_unsupported_attr.rs:4:2
  |
4 | }
  |  ^ consider adding a `main` function to `$DIR/tests/node/std/fail_if_macro_has_unsupported_attr.rs`
