implementations/rust/ockam/ockam/tests/node/std/fail_if_macro_has_unsupported_attr.rs
#[ockam::node(timeout = 100)]
async fn main(c: ockam::Context) {
    c.stop().await.unwrap();
}
